alias(
    name = "cscore",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "header_files",
    actual = "@bzlmodrio-allwpilib//private/cpp/cscore:header_files",
    visibility = ["//visibility:public"],
)

alias(
    name = "static",
    actual = "@bzlmodrio-allwpilib//private/cpp/cscore:static",
    visibility = ["//visibility:public"],
)

alias(
    name = "standalone_static",
    actual = "@bzlmodrio-allwpilib//private/cpp/cscore:standalone_static",
    visibility = ["//visibility:public"],
)

alias(
    name = "shared_interface",
    actual = "@bzlmodrio-allwpilib//private/cpp/cscore:shared_interface",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

alias(
    name = "shared",
    actual = "@bzlmodrio-allwpilib//private/cpp/cscore:shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "shared_raw",
    actual = "@bzlmodrio-allwpilib//private/cpp/cscore:shared_raw",
    visibility = ["//visibility:public"],
)

alias(
    name = "jni",
    actual = "@bzlmodrio-allwpilib//private/cpp/cscore:jni",
    visibility = ["//visibility:public"],
)
