alias(
    name = "hal",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "header_files",
    actual = "@bzlmodrio-allwpilib//private/cpp/hal:header_files",
    visibility = ["//visibility:public"],
)

alias(
    name = "static",
    actual = "@bzlmodrio-allwpilib//private/cpp/hal:static",
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "shared",
    actual = "@bzlmodrio-allwpilib//private/cpp/hal:shared",
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "shared_raw",
    actual = "@bzlmodrio-allwpilib//private/cpp/hal:shared_raw",
    visibility = ["//visibility:public"],
)

alias(
    name = "jni",
    actual = "@bzlmodrio-allwpilib//private/cpp/hal:jni",
    visibility = ["//visibility:public"],
)
