load("@rules_cc//cc:defs.bzl", "cc_library")

alias(
    name = "halsim_gui",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "shared",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/hal:shared",
        "@bzlmodrio-allwpilib//libraries/cpp/ntcore:shared",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:shared",
    ] + [
        "@bzlmodrio-allwpilib//private/cpp/halsim_gui:shared",
    ],
)

cc_library(
    name = "static",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/hal:static",
        "@bzlmodrio-allwpilib//libraries/cpp/ntcore:static",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:static",
    ] + [
        "@bzlmodrio-allwpilib//private/cpp/halsim_gui:static",
    ],
)
