alias(
    name = "halsim_gui",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "header_files",
    actual = "@bzlmodrio-allwpilib//private/cpp/halsim_gui:header_files",
    visibility = ["//visibility:public"],
)

alias(
    name = "static",
    actual = "@bzlmodrio-allwpilib//private/cpp/halsim_gui:static",
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "shared",
    actual = "@bzlmodrio-allwpilib//private/cpp/halsim_gui:shared",
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "shared_raw",
    actual = "@bzlmodrio-allwpilib//private/cpp/halsim_gui:shared_raw",
    visibility = ["//visibility:public"],
)
