load("@rules_cc//cc:defs.bzl", "cc_library")

alias(
    name = "halsim_ws_server",
    actual = ":shared",
    visibility = ["//visibility:public"],
)
alias(
    name = "header_files",
    actual = "@bzlmodrio-allwpilib//private/cpp/halsim_ws_server:header_files",
    visibility = ["//visibility:public"],
)


alias(
    name = "static",
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    actual = "@bzlmodrio-allwpilib//private/cpp/halsim_ws_server:static",
)




alias(
    name = "shared",
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    actual = "@bzlmodrio-allwpilib//private/cpp/halsim_ws_server:shared",
)

alias(
    name = "shared_raw",
    actual = "@bzlmodrio-allwpilib//private/cpp/halsim_ws_server:shared_raw",
    visibility = ["//visibility:public"],
)

