load("@rules_cc//cc:defs.bzl", "cc_library")

alias(
    name = "ntcore",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "shared",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/wpinet:shared",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:shared",
    ] + [
        "@bzlmodrio-allwpilib//private/cpp/ntcore:shared",
    ],
)

cc_library(
    name = "static",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/wpinet:static",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:static",
    ] + [
        "@bzlmodrio-allwpilib//private/cpp/ntcore:static",
    ],
)

cc_library(
    name = "jni",
    visibility = ["//visibility:public"],
    deps = [
        ":ntcore",
        "@bzlmodrio-allwpilib//private/cpp/ntcore:jni",
    ],
)
