alias(
    name = "romiVendordep",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "header_files",
    actual = "@bzlmodrio-allwpilib//private/cpp/romiVendordep:header_files",
    visibility = ["//visibility:public"],
)

alias(
    name = "static",
    actual = "@bzlmodrio-allwpilib//private/cpp/romiVendordep:static",
    visibility = ["//visibility:public"],
)

alias(
    name = "standalone_static",
    actual = "@bzlmodrio-allwpilib//private/cpp/romiVendordep:standalone_static",
    visibility = ["//visibility:public"],
)

alias(
    name = "shared_interface",
    actual = "@bzlmodrio-allwpilib//private/cpp/romiVendordep:shared_interface",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

alias(
    name = "shared",
    actual = "@bzlmodrio-allwpilib//private/cpp/romiVendordep:shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "shared_raw",
    actual = "@bzlmodrio-allwpilib//private/cpp/romiVendordep:shared_raw",
    visibility = ["//visibility:public"],
)
