alias(
    name = "wpilibc",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "hack_headers",
    deps = [
        "@bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_headers//:headers"
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "header_files",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpilibc:header_files",
    visibility = ["//visibility:public"],
)

alias(
    name = "static",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpilibc:static",
    visibility = ["//visibility:public"],
)

alias(
    name = "shared",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpilibc:shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "shared_raw",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpilibc:shared_raw",
    visibility = ["//visibility:public"],
)
