alias(
    name = "wpimath",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "static",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpimath:static",
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "shared",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpimath:shared",
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "jni",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpimath:jni",
    visibility = ["//visibility:public"],
)
