load("@rules_cc//cc:defs.bzl", "cc_library")

alias(
    name = "wpinet",
    actual = ":shared",
    visibility = ["//visibility:public"],
)
alias(
    name = "header_files",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpinet:header_files",
    visibility = ["//visibility:public"],
)


alias(
    name = "static",
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    actual = "@bzlmodrio-allwpilib//private/cpp/wpinet:static",
)




alias(
    name = "shared",
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    actual = "@bzlmodrio-allwpilib//private/cpp/wpinet:shared",
)

alias(
    name = "shared_raw",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpinet:shared_raw",
    visibility = ["//visibility:public"],
)


alias(
    name = "jni",
    visibility = ["//visibility:public"],
    actual = "@bzlmodrio-allwpilib//private/cpp/wpinet:jni",
)
