load("@rules_cc//cc:defs.bzl", "cc_library")

alias(
    name = "wpiutil",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "shared",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-ni//libraries/cpp/ni:shared",
    ] + [
        "@bzlmodrio-allwpilib//private/cpp/wpiutil:shared",
    ],
)

cc_library(
    name = "static",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-ni//libraries/cpp/ni:shared",
    ] + [
        "@bzlmodrio-allwpilib//private/cpp/wpiutil:static",
    ],
)

cc_library(
    name = "jni",
    visibility = ["//visibility:public"],
    deps = [
        ":wpiutil",
        "@bzlmodrio-allwpilib//private/cpp/wpiutil:jni",
    ],
)
