alias(
    name = "wpiutil",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "header_files",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpiutil:header_files",
    visibility = ["//visibility:public"],
)

alias(
    name = "static",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpiutil:static",
    visibility = ["//visibility:public"],
)

alias(
    name = "standalone_static",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpiutil:standalone_static",
    visibility = ["//visibility:public"],
)

alias(
    name = "shared_interface",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpiutil:shared_interface",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

alias(
    name = "shared",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpiutil:shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "shared_raw",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpiutil:shared_raw",
    visibility = ["//visibility:public"],
)

alias(
    name = "jni",
    actual = "@bzlmodrio-allwpilib//private/cpp/wpiutil:jni",
    visibility = ["//visibility:public"],
)
